Theme Dropdown On Small Screen Fix

--- a/style.css
+++ b/style.css
@@ -56,6 +56,18 @@ a {
   transition: opacity 0.15s ease-out;
 }
 
+@media only screen and (max-width: 1600px) {
+  .dropdown {
+    right: 1rem;
+    transform: translateX(0);
+  }
+}
+@media only screen and (max-width: 540px) {
+  .dropdown {
+    width: 100vw;
+    right: 0;
+  }
+}
 .has-dropdown:focus-within .dropdown {
   opacity: 1;
   pointer-events: auto;
@@ -70,7 +82,7 @@ a {
 }
 
 .dropdown-item a::before {
-  content: ' ';
+  content: " ";
   background: var(--bg);
   border: 2px solid var(--border-color);
   border-radius: 50%;
